1999-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (strmtype_*): Change the order of stream types.
        * io.d (pr_stream): Likewise.
        * stream.d: Move the OS dependent stream stuff after the portable
          stuff.
          (STREAM-ELEMENT-TYPE): Change the order of stream types.
          (interactive_stream_p, stream_close, stream_listen, clear_input,
           finish_output, force_output, clear_output): Likewise.

1999-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Change the string element type from `uintB' to `chart' (an abstract
        equivalent of `cint').
        * lispbibl.d (OBJECT_STRUCT): Define macro.
          (chart): New type.
          (as_cint, as_chart): New macros.
          (code_char, char_code): Convert from/to chart now, instead of cint.
          (chareq, charlt, chargt): New macros.
          (ascii, ascii_char): New macros.
          (sstring_): Change element type to `chart'.
          (with_string_0, with_sstring_0, with_string, with_sstring): Update.
          (ssstring_push_extend): Change declaration.
          (up_case, down_case, alphanumericp, graphic_char_p, unpack_string,
           char_name, test_string_limits, nstring_upcase, nstring_downcase,
           nstring_capitalize): Likewise.
          (write_ascii_char): Update.
          (read_char_array, write_char_array): Change delaration.
        * genclisph.d (chart): New type.
          (as_cint, as_chart): New macros.
          (code_char, char_code): Convert from/to chart now, instead of cint.
        * spvw.d (make_string, string_to_asciz, main): Update.
        * spvw_objsize.d (size_sstring): Update.
        * charstrg.d (up_case, down_case, alphap, alphanumericp,
           graphic_char_p, unpack_string, string_gleich, string_equal,
           copy_string, coerce_char, char_name, STANDARD-CHAR-P, UPPER-CASE-P,
           LOWER-CASE-P, BOTH_CASE-P, DIGIT-CHAR-P, CHAR-CODE, CODE-CHAR,